[tool.poetry]
name = "data-prisma"
version = "0.1.0"
description = ""
authors = ["Ming Yang <vivym@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.19.1"
pydantic = "^2.7.1"
tokenizers = "^0.19.1"
scipy = "^1.13.1"
deepl = "^1.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
